--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="identify_record_permission_alert_dialog_not_available_message">The application cannot access your microphone to record the audio. Provide access to android.permission.RECORD_AUDIO permission.</string>
     <string name="ok">OK</string>
     <string name="settings">Settings</string>
+    <string name="cover_art">Cover</string>
+    <string name="lyrics">Lyrics</string>
 </resources>
