--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="about">About</string>
+    <string name="action_view_error">Couldn\'t start the application</string>
     <string name="app_name">Audire</string>
     <string name="bottom_navigation_view_identify">Identify</string>
     <string name="bottom_navigation_view_history">History</string>
@@ -14,4 +15,10 @@
     <string name="settings">Settings</string>
     <string name="cover_art">Cover</string>
     <string name="lyrics">Lyrics</string>
+    <string name="label">Label</string>
+    <string name="year">Year</string>
+    <string name="album">Album</string>
+    <string name="search">Search</string>
+    <string name="spotify">Spotify</string>
+    <string name="youtube">YouTube</string>
 </resources>
