--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="search">Search</string>
     <string name="spotify">Spotify</string>
     <string name="youtube">YouTube</string>
+    <string name="no_history_message">Your history will be displayed here</string>
 </resources>
