fix: specify liftOnScrollTargetViewId in AppBarLayout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,25 +1,29 @@
 <resources>
     <string name="about">About</string>
     <string name="action_view_error">Couldn\'t start the application</string>
-    <string name="app_name">Audire</string>
-    <string name="bottom_navigation_view_identify">Identify</string>
-    <string name="bottom_navigation_view_history">History</string>
-    <string name="identify_error">Could not identify. Retry?</string>
-    <string name="identify_error_details">Details</string>
-    <string name="identify_error_alert_dialog_title">:(</string>
-    <string name="identify_record">Record</string>
-    <string name="identify_stop">Stop</string>
-    <string name="identify_record_permission_alert_dialog_not_available_title">Insufficient permissions</string>
-    <string name="identify_record_permission_alert_dialog_not_available_message">The application cannot access your microphone to record the audio. Provide access to android.permission.RECORD_AUDIO permission.</string>
-    <string name="ok">OK</string>
-    <string name="settings">Settings</string>
-    <string name="cover_art">Cover</string>
-    <string name="lyrics">Lyrics</string>
-    <string name="label">Label</string>
-    <string name="year">Year</string>
     <string name="album">Album</string>
-    <string name="search">Search</string>
-    <string name="spotify">Spotify</string>
-    <string name="youtube">YouTube</string>
+    <string name="app_name">Audire</string>
+    <string name="bottom_navigation_view_history">History</string>
+    <string name="bottom_navigation_view_identify">Identify</string>
+    <string name="cover_art">Cover</string>
+    <string name="identify_error">Could not identify. Retry?</string>
+    <string name="identify_error_alert_dialog_title">:(</string>
+    <string name="identify_error_details">Details</string>
+    <string name="identify_record">Record</string>
+    <string name="identify_record_permission_alert_dialog_not_available_message">The application cannot access your microphone to record the audio. Provide access to android.permission.RECORD_AUDIO permission.</string>
+    <string name="identify_record_permission_alert_dialog_not_available_title">Insufficient permissions</string>
+    <string name="identify_stop">Stop</string>
+    <string name="label">Label</string>
+    <string name="lyrics">Lyrics</string>
+    <string name="no">No</string>
     <string name="no_history_message">Your history will be displayed here</string>
+    <string name="ok">OK</string>
+    <string name="remove_history_item_description">Remove this item from the history?</string>
+    <string name="remove_history_item_title">Remove</string>
+    <string name="search">Search</string>
+    <string name="settings">Settings</string>
+    <string name="spotify">Spotify</string>
+    <string name="year">Year</string>
+    <string name="yes">Yes</string>
+    <string name="youtube">YouTube</string>
 </resources>
