--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,12 @@
     <string name="remove_history_item_title">Remove</string>
     <string name="search">Search</string>
     <string name="settings">Settings</string>
+    <string name="settings_appearance">Appearance</string>
+    <string name="settings_appearance_system_color_scheme">System color scheme</string>
+    <string name="settings_appearance_theme">Theme</string>
+    <string name="settings_appearance_theme_dark">Dark</string>
+    <string name="settings_appearance_theme_light">Light</string>
+    <string name="settings_appearance_theme_system">System</string>
     <string name="spotify">Spotify</string>
     <string name="year">Year</string>
     <string name="yes">Yes</string>
