feat/refactor: LikedFragment & HistoryViewModel history items StateFlow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="identify_stop">Stop</string>
     <string name="label">Label</string>
     <string name="license">License</string>
+    <string name="liked">Liked</string>
     <string name="lyrics">Lyrics</string>
     <string name="no">No</string>
     <string name="no_history_message">Your history will be displayed here</string>
