--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="developer_github">Follow on GitHub</string>
     <string name="developer_name">Hitesh Kumar Saini</string>
     <string name="developer_x">Follow on X</string>
+    <string name="find_music_qs_tile">Find music</string>
     <string name="github">GitHub</string>
     <string name="identify_error">Could not identify. Retry?</string>
     <string name="identify_error_alert_dialog_title">:(</string>
