FIX: Add missing word in remove history dialogue

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,7 @@
     <string name="no_search_results">Nothing like that was found</string>
     <string name="ok">OK</string>
     <string name="privacy">Privacy</string>
-    <string name="remove_history_item_message">Do you want to \"%1$s\" from the history?</string>
+    <string name="remove_history_item_message">Do you want to remove \"%1$s\" from the history?</string>
     <string name="remove_history_item_title">Remove</string>
     <string name="search">Search</string>
     <string name="settings">Settings</string>
